--- a/.gitignore
+++ b/.gitignore
@@ -158,5 +158,5 @@ dmypy.json
 
 data/
 
-preprocessing/processed/*
-!preprocessing/processed/1.*Overview-empty.xlsx
+processed/*
+!processed/1.*Overview-empty.xlsx
